<resources>
    <string name="app_name">Socket_connection</string>
    <string name="IP">IP: </string>
    <string name="Port">Port: </string>
    <string name="Button_connect">Connect</string>
    <string name="Button_disconnect">Disconnect</string>
    <string name="hr">------------------------------------------------------</string>
    <string name="Msg">Message: </string>
    <string name="wait">Waiting...</string>
    <string name="send">Send</string>
    <string name="auto">Auto</string>
    <string name="status">Status</string>
</resources>
